--- 0.9.1
* MSI installer now has an upgrade code.
* Data Access code moved to a seperate DLL.
* Added a display mode where you get INSERT statements to populate said data into anothe database.
* Fixed a bug where you could not display SQLite tables with more than 500 rows by double clicking.
* Consolidated File opening code.
* Application gives a nice error if you open a non existant access file.
* Specified that PlaneDisasterSection could be in user.config in the constructor For PlaneDisasterSection.
* Updated aboutbox to use strings from the AssemblyManifest.
--- 0.9
* Per user configuration file via "System.Configuration" (previously no configuration at all)
* An Open Recent file menu to list all the recently opened files.
* The binary is now signed. I don't quite understand the ramifications of 
this. I have included the key in svn.
* Made a separate class (PlaneDisaster) for the Main Function.
* Now possible to explicitly create a new Access 95 or Access 2000 database.
* Can now open up mde files. from the file dialogs and command line.
* Running Stored procedures that reference non existant queries no longer 
generates an exception.
* Installer now adds a start menu icon and File Associations.
--- pre 0.9
* Built the application
* Made it suck less
* Built the NSIS Installer
* built the MSI installer
* You now get binaries without debuggins info.
* BUG FIXED: If you opened a database file by command line, the right click
menues for Tables, Views and Procedures were not generates.