@@ -1,4 +1,8 @@
 --- 0.9.1
+* Better delegate assigning
+* Better exception handling
+* Doubleclick for the Table View, and Procedure ListBox events only fire when listboxes are populated.
+* [BUGFIX] Context menues now show up when you Open a file via the Open Recent menu.
 * MSI installer now has an upgrade code.
 * Data Access code moved to a seperate DLL.
 * Added a display mode where you get INSERT statements to populate said data into anothe database.
